crates/mir/filetests/tests/invalid_programs/invalid_block_args.mir
// @harness parser_roundtrip
// @harness typecheck_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0
            (jump (block1 ())))
        (block block1
            (param v0 int)
            (return (v0)))))